fixed rendering issues on IE10

--- a/SubdivxSearch/Content/bootstrap.css
+++ b/SubdivxSearch/Content/bootstrap.css
@@ -4731,15 +4731,15 @@ a.list-group-item.active > .badge,
   position: fixed;
 }
 
-@-ms-viewport {
-  width: device-width;
+/*@-ms-viewport {
+  width: auto;
 }
 
 @media screen and (max-width: 400px) {
   @-ms-viewport {
     width: 320px;
   }
-}
+}*/
 
 .hidden {
   display: none !important;
